Bug 414493 - [Shell] Long string results are not wrapped at the end of line

--- a/bundles/org.eclipse.orion.client.ui/web/shell/shellPage.css
+++ b/bundles/org.eclipse.orion.client.ui/web/shell/shellPage.css
@@ -19,7 +19,7 @@ html,body {
 }
 
 .gcli-row-out > p, .gcli-row-out > div > span {
-	white-space: pre;
+	white-space: pre-wrap;
 }
 
 .modelDecorationSprite { 
